# DocEnTR

./: .gitignore  pyproject.toml
